--- a/src/haskell/tetris.cabal
+++ b/src/haskell/tetris.cabal
@@ -8,7 +8,7 @@ category:            Game
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable htetris
+executable tetris
   main-is:             Main.hs
   other-modules:       Tetris, TetrisGrafico
   build-depends:       base, ncurses, random, directory
