--- a/src/haskell/tetris.cabal
+++ b/src/haskell/tetris.cabal
@@ -9,7 +9,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable tetris
-  main-is:             Main.hs
+  main-is:             Main
   other-modules:       Tetris, TetrisGrafico
   build-depends:       base, ncurses, random, directory
   default-language:    Haskell2010
