--- a/src/haskell/tetris.cabal
+++ b/src/haskell/tetris.cabal
@@ -9,9 +9,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable tetris
-  main-is:             Main
+  main-is:             Main.hs
   other-modules:       Tetris, TetrisGrafico
   build-depends:       base, ncurses, random, directory
+  hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -O2 -Wall -Werror
     -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
