--- a/src/haskell/tetris.cabal
+++ b/src/haskell/tetris.cabal
@@ -1,4 +1,5 @@
 name:                tetris
+version:             1.0
 category:            Game
 build-type:          Simple
 cabal-version:       >=1.10
